rethemed dark mode and fixed dark mode code blocks

--- a/mdstyles.css
+++ b/mdstyles.css
@@ -1,9 +1,9 @@
 /* Stylesheet for markdown output formatting */
-
 #mdRender {
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
     font-size: 16px;
     line-height: 1.5;
+    border-color: #dee3e8;
 }
 
 #mdRender.popup {
@@ -11,10 +11,18 @@
 }
 
 /* <pre> tags used for code blocks only */
-pre:has(> code){
+pre:has(> code) {
     padding: 10px;
     background-color: #f6f8fa;
     font-size: 14px;
+}
+
+pre:has(> code)[data-theme="dark"] {
+    background-color : #2e2e2e;
+}
+
+.hljs[data-theme="dark"] {
+    color: #cccccc;
 }
 
 strong {
